--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "lint": "eslint src/**/*.js",
